--- a/mineral'nyye_udobreniya.html
+++ b/mineral'nyye_udobreniya.html
@@ -66,85 +66,7 @@
     </header>
     <main class='content'>
         <div class="container">
-            <h2 class="content__h2">Lorem.</h2>
-            <p class="content__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur officiis doloribus,
-                debitis voluptatum repellat omnis mollitia corrupti accusamus sit deleniti!</p>
-            <div class="content__row">
-                <div class="content__item">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="./img/unnamed.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Технические культуры<i
-                                    class="material-icons right">more_vert</i></span>
-
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Технические культуры<i
-                                    class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="content__item">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="./img/_1441-624.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Зерновые культуры<i
-                                    class="material-icons right">more_vert</i></span>
-
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Зерновые культуры<i
-                                    class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="content__item">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="./img/_73289-74.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Овощи<i
-                                    class="material-icons right">more_vert</i></span>
-
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Овощи<i
-                                    class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="content__item">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator"
-                                src="./img/depositphotos_2062942-stock-photo-ripe-red-apple-on-a.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Фрукты<i
-                                    class="material-icons right">more_vert</i></span>
-
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Фрукты<i
-                                    class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <h2 class="content__h2 uc">Наша работа - Щедрый урожай!</h2>
+            <h2 class="content__h2">Азотные минеральные удобрения.</h2>
         </div>
     </main>
     <footer class=" page-footer footer">
