--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/main.min.css">
-    <title>Органика</title>
+    <title>Органика - Товары и услуги</title>
 </head>
 
 <body>
@@ -32,8 +32,10 @@
                 <ul>
                     <li> <a class="waves-effect waves-light" href="index.html">Главная</a></li>
                     <li> <a class="waves-effect waves-light" href="services.html">Товары и услуги</a></li>
-                    <li> <a class="waves-effect waves-light" href="recomendatsii-po-primrneniu.html">Рекомендации по применению</a></li>
-                    <li> <a class="waves-effect waves-light" href="mineral'nyye_udobreniya.html">Азотные минеральные удобрения</a></li>
+                    <li> <a class="waves-effect waves-light" href="recomendatsii-po-primrneniu.html">Рекомендации по
+                            применению</a></li>
+                    <li> <a class="waves-effect waves-light" href="mineral'nyye_udobreniya.html">Азотные минеральные
+                            удобрения</a></li>
                     <li> <a class="waves-effect waves-light" href="сertifications.html">Сертификаты</a></li>
                     <li> <a class="waves-effect waves-light" href="reviews.html">Отзывы</a></li>
                     <li> <a class="waves-effect waves-light" href="contact.html">Контакты</a></li>
@@ -66,85 +68,7 @@
     </header>
     <main class='content'>
         <div class="container">
-            <h2 class="content__h2">Lorem.</h2>
-            <p class="content__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur officiis doloribus,
-                debitis voluptatum repellat omnis mollitia corrupti accusamus sit deleniti!</p>
-            <div class="content__row">
-                <div class="content__item">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="./img/unnamed.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Технические культуры<i
-                                    class="material-icons right">more_vert</i></span>
-
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Технические культуры<i
-                                    class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="content__item">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="./img/_1441-624.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Зерновые культуры<i
-                                    class="material-icons right">more_vert</i></span>
-
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Зерновые культуры<i
-                                    class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="content__item">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="./img/_73289-74.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Овощи<i
-                                    class="material-icons right">more_vert</i></span>
-
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Овощи<i
-                                    class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="content__item">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator"
-                                src="./img/depositphotos_2062942-stock-photo-ripe-red-apple-on-a.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Фрукты<i
-                                    class="material-icons right">more_vert</i></span>
-
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Фрукты<i
-                                    class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <h2 class="content__h2 uc">Наша работа - Щедрый урожай!</h2>
+            <h2 class="content__h2">Товары и услуги</h2>
         </div>
     </main>
     <footer class=" page-footer footer">
@@ -172,18 +96,19 @@
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
                                     href="сertifications.html">Сертификаты</a>
                             </li>
-                            <li class="footer__nav"> <a class="grey-text text-lighten-3 waves-effect waves-light" href="reviews.html">Отзывы</a></li>
+                            <li class="footer__nav"> <a class="grey-text text-lighten-3 waves-effect waves-light"
+                                    href="reviews.html">Отзывы</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
                                     href="contact.html">Контакты</a></li>
                         </ul>
                         <ul class="footer__ul">
-                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://vk.com"><i
-                                        class="fab fa-vk"></i></a></li>
+                            <li class="footer__social waves-effect waves-light"><a target="blank"
+                                    href="http://vk.com"><i class="fab fa-vk"></i></a></li>
 
-                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://facebook.com"><i
-                                        class="fab fa-facebook-f"></i></a></li>
-                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://instagram.com/organika77/"><i
-                                        class="fab fa-instagram"></i></a></li>
+                            <li class="footer__social waves-effect waves-light"><a target="blank"
+                                    href="http://facebook.com"><i class="fab fa-facebook-f"></i></a></li>
+                            <li class="footer__social waves-effect waves-light"><a target="blank"
+                                    href="http://instagram.com/organika77/"><i class="fab fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
