--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,10 @@
                     <ul>
                         <li> <a class="waves-effect waves-light" href="index.html">Главная</a></li>
                         <li> <a class="waves-effect waves-light" href="services.html">Товары и услуги</a></li>
-                        <li> <a class="waves-effect waves-light" href="recomendatsii-po-primrneniu.html">Рекомендации по применению</a></li>
-                        <li> <a class="waves-effect waves-light" href="mineral'nyye_udobreniya.html">Азотные минеральные удобрения</a></li>
+                        <li> <a class="waves-effect waves-light" href="recomendatsii-po-primrneniu.html">Рекомендации по
+                                применению</a></li>
+                        <li> <a class="waves-effect waves-light" href="mineral'nyye_udobreniya.html">Азотные минеральные
+                                удобрения</a></li>
                         <li> <a class="waves-effect waves-light" href="сertifications.html.html">Сертификаты</a></li>
                         <li> <a class="waves-effect waves-light" href="reviews.html">Отзывы</a></li>
                         <li> <a class="waves-effect waves-light" href="contact.html">Контакты</a></li>
@@ -74,9 +76,10 @@
                     <h2 class="content__h2">Офис</h2>
                     <div class="content__contact-info">
                         <div class="content__contact-info--addres">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div class="addres-text">Краснодарский край, город Краснодар,<br> ул.Старокубанская, д.114/1,
-                                офис 212.</div>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <div class="addres-text">Краснодарский край, город Краснодар,<br> ул.Старокубанская,
+                                    д.114/1,
+                                    офис 212.</div>
                         </div>
                         <div class="content__contact-info--number-phone">
                             <a href="tel:88612125908" class="link"><i class="fas fa-phone"></i>Тел.офис:
@@ -97,7 +100,7 @@
                 <div class="col s6">
                     <h2 class="content__h2">Склад</h2>
                     <div class="content__contact-info">
-                        
+
                     </div>
                 </div>
             </div>
@@ -119,19 +122,20 @@
                     <div class="footer__wraper">
                         <ul class="footer__ul">
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                href="index.html">Главная</a></li>
-                        <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                href="services.html">Товары и услуги</a></li>
-                        <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                href="recomendatsii-po-primrneniu.html">Рекомендации по применению</a></li>
-                        <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                href="mineral'nyye_udobreniya.html">Азотные минеральные удобрения</a></li>
-                        <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                href="сertifications.html">Сертификаты</a>
-                        </li>
-                        <li class="footer__nav"> <a class="grey-text text-lighten-3 waves-effect waves-light" href="reviews.html">Отзывы</a></li>
-                        <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                href="contact.html">Контакты</a></li>
+                                    href="index.html">Главная</a></li>
+                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
+                                    href="services.html">Товары и услуги</a></li>
+                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
+                                    href="recomendatsii-po-primrneniu.html">Рекомендации по применению</a></li>
+                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
+                                    href="mineral'nyye_udobreniya.html">Азотные минеральные удобрения</a></li>
+                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
+                                    href="сertifications.html">Сертификаты</a>
+                            </li>
+                            <li class="footer__nav"> <a class="grey-text text-lighten-3 waves-effect waves-light"
+                                    href="reviews.html">Отзывы</a></li>
+                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
+                                    href="contact.html">Контакты</a></li>
                         </ul>
                         <ul class="footer__ul">
                             <li class="footer__social waves-effect waves-light"><a href="#!"><i
