--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
     <header class="main__header" style="background-image: url('./img/4.jpg');">
         <div class="fixed-menu">
-            <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-
-            <i class="material-icons close">close</i>
+            <a href="#" data-target="slide-out" class="sidenav-trigger">
+                <i class="material-icons">menu</i>
+            </a>
         </div>
         <ul id="slide-out" class="sidenav toolbar">
             <div class="toolbar__tel">
@@ -58,8 +58,8 @@
             </div>
 
         </ul>
-        
-        <div class="header s12">
+
+        <div class="header">
             <div class="container">
                 <div class="header__wraper">
                     <div class="header__subtitle">Эксклюзивный дистрибьютор ООО &ldquo;РОСОМУ&rdquo;</div>
@@ -70,8 +70,8 @@
             </div>
         </div>
     </header>
-    <main class='content'>
-        <div class="container">
+    <main class='container'>
+        <div class="content">
             <h2 class="content__h2">Lorem.</h2>
             <p class="content__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur officiis doloribus,
                 debitis voluptatum repellat omnis mollitia corrupti accusamus sit deleniti!</p>
