--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
         <div class="container">
             <h2 class="content__h2">Контакты</h2>
             <div class="row">
-                <div class="col s6">
+                <div class="col s12 m6">
                     <h2 class="content__h2">Офис</h2>
                     <div class="content__contact-info">
                         <div class="content__contact-info--addres">
@@ -98,7 +98,7 @@
                             src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2a33046f5ac80d1806ae8fa8ef7d82d289f8aafc15b25c5d6ffb7b90f6f9aedb&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
                     </div>
                 </div>
-                <div class="col s6">
+                <div class="col s12 m6">
                     <h2 class="content__h2">Склад</h2>
                     <div class="content__contact-info">
 
